[package]
name         = "cpprs"
version      = "0.1.0"
authors      = ["Vanessa McHale <vamchale@gmail.com>"]
edition      = "2018"
description  = "Use the C pre-processor on Rust source files"
license-file = "LICENSE"
repository   = "https://github.com/vmchale/cpp-build.git"

[dependencies]
walkdir = "2"
regex = "1"
lazy_static = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cpprs_bench"
harness = false

[profile.release]
lto = true
